objects/FieloEE__Transaction__c.object
<CustomObject>
    <description>Actions that generate points performed by members.</description>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Adjust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Adjust Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ApprovedReadOnly__c</fullName>
        <formula>IF(  FieloEE__Approved__c , $Label.fieloee__approved , $Label.fieloee__notapproved )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether the transaction was or not approved (read only field).</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__BranchCode__c</fullName>
        <description>Branch where the transaction was done.</description>
        <label>Branch Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch where transaction was done</description>
        <inlineHelpText>Look up the branch where the transaction took place.</inlineHelpText>
        <label>Branch</label>
        <referenceTo>FieloEE__Branch__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__CodeItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Item</label>
        <referenceTo>FieloEE__Code__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Code__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Cost__c</fullName>
        <description>Cost related to each point.</description>
        <formula>IF(ISNULL(FieloEE__PointCost__c), FieloEE__Points__c * FieloEE__Member__r.FieloEE__Program__r.FieloEE__PointCost__c, FieloEE__Points__c * FieloEE__PointCost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__DateReadOnly__c</fullName>
        <formula>FieloEE__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date &amp; Time (Read Only)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloEE__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date and time of this transaction.</description>
        <inlineHelpText>Enter date and time of this transaction.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloEE__IdentificationType__c</fullName>
        <description>Identification of the member entered in the transaction.</description>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Location__c</fullName>
        <label>Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberCode__c</fullName>
        <description>ID of the member that made the transaction.</description>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberReadOnly__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + FieloEE__Member__c ,  FieloEE__Member__r.FieloEE__Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The member who peformed the transaction.</description>
        <inlineHelpText>Enter the member who performed this transaction.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for the transaction to be processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointCost__c</fullName>
        <description>The value of a point in real life currency.</description>
        <inlineHelpText>Enter actual cost, in the  currency of your choice, of a point in your program.</inlineHelpText>
        <label>Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsReadOnly__c</fullName>
        <formula>FieloEE__Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points (Read Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Points__c</fullName>
        <description>The number of points produced by the transaction.</description>
        <inlineHelpText>Enter the number of points produced by this transaction.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__ProcessedStatusReadOnly__c</fullName>
        <formula>IF(  FieloEE__Processed__c ,  $Label.fieloee__processed ,  $Label.fieloee__notprocessed )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether the transaction was or not processed (read only field).</description>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>On case of a referral transaction, here is the link to the referred.</description>
        <label>Referral</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Transactions (Referral)</relationshipLabel>
        <relationshipName>TransactionsFromReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Revenue__c</fullName>
        <description>Value earned in the transaction: It is equivalent to Value - Cost, and it has to be positive.</description>
        <formula>FieloEE__Value__c - FieloEE__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__StatusReadOnly__c</fullName>
        <formula>TEXT(FieloEE__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Unapproved Transaction</fullName>
                </value>
                <value>
                    <fullName>Error in the Approval Process</fullName>
                </value>
                <value>
                    <fullName>Transaction without Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__TransactionId__c</fullName>
        <description>A code you can assign to this transaction in order to identify it later.</description>
        <inlineHelpText>Enter an unique code in order to identify this transaction (optional).</inlineHelpText>
        <label>Transaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>The type of the transaction.</description>
        <inlineHelpText>Pick the type of transaction.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adjust</fullName>
                </value>
                <value>
                    <fullName>Code Insert</fullName>
                </value>
                <value>
                    <fullName>Expiration</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                    <default>true</default>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>Referral - Step 1</fullName>
                </value>
                <value>
                    <fullName>Referral - Step 2</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The value of the purchase originating this transaction.</description>
        <inlineHelpText>Enter the purchase value.</inlineHelpText>
        <label>Purchase Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FieloEE__All_Transactions</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Type__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__MemberReadOnly__c</columns>
        <columns>FieloEE__DateReadOnly__c</columns>
        <columns>FieloEE__ApprovedReadOnly__c</columns>
        <columns>FieloEE__ProcessedStatusReadOnly__c</columns>
        <columns>FieloEE__StatusReadOnly__c</columns>
        <columns>FieloEE__PointsReadOnly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ByTypeCodeInsert</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Type__c</field>
            <operation>equals</operation>
            <value>Code Insert</value>
        </filters>
        <label>By Type Code Insert</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ByTypePurchase</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Type__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>By Type Purchase</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ByTypeReferralCompleteSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Type__c</field>
            <operation>equals</operation>
            <value>Referral - Step 2</value>
        </filters>
        <label>By Type Referral - Complete Signup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ByTypeReferralSimpleSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Type__c</field>
            <operation>equals</operation>
            <value>Referral - Step 1</value>
        </filters>
        <label>By Type Referral - Simple Signup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ByTypeRegistration</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloEE__Type__c</field>
            <operation>equals</operation>
            <value>Registration</value>
        </filters>
        <label>By Type Registration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloEE__ThisWeek</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Processed__c</columns>
        <columns>FieloEE__Member__c</columns>
        <columns>FieloEE__IdentificationType__c</columns>
        <columns>FieloEE__MemberCode__c</columns>
        <columns>FieloEE__Value__c</columns>
        <columns>FieloEE__Points__c</columns>
        <columns>FieloEE__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloEE__ValidateTransactionType</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__Value__c != 0 &amp;&amp; ( ISPICKVAL(FieloEE__Type__c, &apos;Code Insert&apos; ) || ISPICKVAL(FieloEE__Type__c, &apos;Referral - Step 1&apos; ) || ISPICKVAL(FieloEE__Type__c, &apos;Referral - Step 2&apos; ) || ISPICKVAL(FieloEE__Type__c, &apos;Registration&apos; ) )</errorConditionFormula>
        <errorMessage>You must enter &quot;Purchase value = 0&quot; for transactions of types: Registration, Code insert, Referral - Simple signup, and Referral - Complete signup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__ValidateTransactionValue</fullName>
        <active>false</active>
        <errorConditionFormula>FieloEE__Value__c = 0 &amp;&amp; ISPICKVAL(FieloEE__Type__c, &apos;Purchase&apos; )</errorConditionFormula>
        <errorDisplayField>FieloEE__Value__c</errorDisplayField>
        <errorMessage>Value cannot be 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_Member</fullName>
        <active>true</active>
        <errorConditionFormula>(FieloEE__Member__c == null)  &amp;&amp; ( FieloEE__MemberCode__c == null || ISPICKVAL(FieloEE__IdentificationType__c,&apos;&apos;) )</errorConditionFormula>
        <errorMessage>You must complete the Member Code and Identification Type, or the Member Field.</errorMessage>
    </validationRules>
</CustomObject>